syntax = "proto3";

package userpb;

//import "role/role.proto";
import "google/protobuf/timestamp.proto";

option go_package = "com.example/pkg/services/app/user/grpc/gen";


message User {
    string id = 1;
    string email = 2;
    string email_verified = 3;
    //repeated Role roles = 4;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}